--- a/index.html
+++ b/index.html
@@ -60,9 +60,18 @@
             </aside>
 
             <section class="panel audio-panel">
-                <div style="padding:10px; font-size:9px; color:var(--n); border-bottom:1px solid var(--border)">AUDIO_CORE_STREAM</div>
-                <iframe class="spotify-frame" src="https://open.spotify.com/embed/track/4v096XSTU9uIu56U38Xo7t?utm_source=generator&theme=0" width="100%" height="152" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </section>
+    <div style="padding:10px; font-size:9px; color:var(--n); border-bottom:1px solid var(--border)">AUDIO_CORE_STREAM // END_OF_LINE</div>
+    <iframe 
+        style="border-radius:12px; filter: hue-rotate(180deg) brightness(0.9);" 
+        src="https://open.spotify.com/track/09TlxralXOGX35LUutvw7I?utm_source=google&utm_medium=gemini" 
+        width="100%" 
+        height="152" 
+        frameBorder="0" 
+        allowfullscreen="" 
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+        loading="lazy">
+    </iframe>
+</section>
         </div>
 
         <div class="chat-wrapper">
