--- a/index.html
+++ b/index.html
@@ -158,31 +158,53 @@ const Core = {
         if(error) alert(error.message);
     },
     Audio: {
-        setup() { this.el = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3'); this.el.loop = true; },
+        playing: false,
+        setup() { 
+            this.el = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3'); 
+            this.el.loop = true; 
+            this.el.volume = 0.2;
+        },
         toggle() {
             const b = document.getElementById('audio-btn');
-            if(this.el.paused) { this.el.play(); b.classList.add('playing'); }
-            else { this.el.pause(); b.classList.remove('playing'); }
+            if(this.el.paused) { this.el.play(); b.classList.add('playing'); this.playing = true; }
+            else { this.el.pause(); b.classList.remove('playing'); this.playing = false; }
         }
     },
     Chat: {
         async load() { const { data } = await Core.sb.from('comments').select('*').order('created_at', {ascending:true}); if(data) { document.getElementById('chat-stream').innerHTML = ''; data.forEach(m => this.render(m)); } },
-        render(m) { const s = document.getElementById('chat-stream'), d = document.createElement('div'); d.className = 'msg-container'; d.innerHTML = `<div class="msg-nick">${(m.nickname||'PILOT').toUpperCase()}</div><div class="msg-text">${m.message}</div>`; s.appendChild(d); s.scrollTop = s.scrollHeight; },
-        async send() { const i = document.getElementById('chat-in'); if(!i.value || !this.user) return; const n = this.user.email.split('@')[0], v = i.value; i.value = ''; this.render({nickname: n, message: v}); await Core.sb.from('comments').insert([{message: v, nickname: n}]); }
-    },
+        render(m) { 
+    const s = document.getElementById('chat-stream'), d = document.createElement('div'); 
+    d.className = 'msg-container';
+    const time = new Date(m.created_at || Date.now()).toLocaleTimeString('ru-RU', {hour:'2-digit', minute:'2-digit', hour12:false});
+    d.innerHTML = `<div class="msg-nick">${(m.nickname||'PILOT').toUpperCase()} <span style="opacity:0.4; font-size:9px; margin-left:10px;">${time}</span></div><div class="msg-text" style="color:#fff; font-size:13px; background:rgba(0,242,255,0.05); padding:10px; border-radius:4px; border-left: 2px solid var(--n);">${m.message}</div>`; 
+    s.appendChild(d); 
+    s.scrollTop = s.scrollHeight; 
+},
     UI() {
         document.getElementById('todo-in').onkeypress = (e) => { if(e.key === 'Enter' && e.target.value) { const d = document.createElement('div'); d.className = 'task'; d.innerText = '> ' + e.target.value.toUpperCase(); d.onclick = () => d.remove(); document.getElementById('todo-list').prepend(d); e.target.value = ''; } };
         document.getElementById('chat-in').onkeypress = (e) => { if(e.key === 'Enter') this.Chat.send(); };
     },
     Canvas: {
-        init() {
-            this.cvs = document.getElementById('starfield'); this.ctx = this.cvs.getContext('2d'); this.res();
-            window.addEventListener('resize', () => this.res());
-            this.stars = Array.from({length:200}, () => ({x:Math.random()*this.cvs.width, y:Math.random()*this.cvs.height, s:Math.random()*2, v:Math.random()*0.3, b:Math.random()}));
-            this.debris = Array.from({length:25}, () => ({x:Math.random()*this.cvs.width, y:Math.random()*this.cvs.height, s:Math.random()*3+1, vx:-Math.random()*0.5}));
-            this.crew = Array.from({length:3}, () => ({x:Math.random()*this.cvs.width, y:Math.random()*this.cvs.height, rot:Math.random()*6, vr:0.005, vx:(Math.random()-0.5)*0.3, vy:(Math.random()-0.5)*0.3}));
-            this.ufo = {x:-100, y:350, p:[]}; this.comet = {x:-200, y:0, active:false};
-        },
+       init() {
+        this.Canvas.init(); this.Audio.setup(); this.UI();
+        setInterval(() => {
+            const now = new Date();
+            document.getElementById('clock').innerText = now.toLocaleTimeString('ru-RU', { 
+                hour: '2-digit', 
+                minute: '2-digit', 
+                second: '2-digit', 
+                hour12: false 
+            });
+        }, 1000);
+        this.sb.auth.onAuthStateChange((_, s) => { 
+            if(s) { 
+                this.user = s.user; 
+                document.getElementById('auth-gate').classList.add('hidden'); 
+                this.Chat.load(); 
+            }
+        });
+        this.loop();
+    },
         res() { this.cvs.width = window.innerWidth; this.cvs.height = window.innerHeight; },
         drawAstro(a) {
             const ctx = this.ctx; ctx.save(); ctx.translate(a.x, a.y); ctx.rotate(a.rot);
@@ -217,8 +239,13 @@ const Core = {
             this.drawUFO(this.ufo);
         }
     },
-    loop() { Core.Canvas.draw(); requestAnimationFrame(() => Core.loop()); }
+  loop() { 
+        Core.Canvas.draw(); 
+        requestAnimationFrame(() => Core.loop()); 
+    }
+}
 };
+
 window.onload = () => Core.init();
 </script>
 </body>
