--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ const Core = {
         setup() { 
             this.el = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3'); 
             this.el.loop = true; 
-            this.el.volume = 0.2;и
+            this.el.volume = 0.2;
         },
         toggle() {
             const b = document.getElementById('audio-btn');
